# prox_ros2

./: README.md
colcon-mixin/: index.yaml  prox.mixin
prox2f_attraction/: CMakeLists.txt  package.xml
prox2f_attraction/include/prox2f_attraction/: virtual_wrench_node.hpp  wrench_to_twist_node.hpp
prox2f_attraction/src/: virtual_wrench_node.cpp  virtual_wrench_params.yaml  wrench_to_twist_node.cpp  wrench_to_twist_params.yaml
prox2f_camera/: CMakeLists.txt  package.xml
prox2f_camera/include/prox2f_camera/: cacmera_transform_publisher_node.hpp
prox2f_camera/src/: camera_transform_publisher_node.cpp  camera_transform_publisher_params.yaml
prox2f_contact_analysis/: CMakeLists.txt  package.xml
prox2f_contact_analysis/include/prox2f_contact_analysis/: contact_mapping_node.hpp  contact_surface.hpp  resample_cloud_node.hpp  robotiq_2f_85_fingertip.hpp  virtual_wrench_node.hpp
prox2f_contact_analysis/src/: contact_mapping_node.cpp  resample_cloud_node.cpp  robotiq_2f_85_fingertip.cpp  sim_state_publisher_node.cpp  virtual_wrench_node.cpp
prox2f_control/: CMakeLists.txt  controller_plugins.xml  package.xml
prox2f_control/include/prox2f_control/: twist_controller.hpp  wrench_controller.hpp
prox2f_control/src/: twist_controller.cpp  twist_controller_params.yaml  wrench_controller.cpp  wrench_controller_params.yaml
prox2f_description/: CMakeLists.txt  package.xml
prox2f_description/config/: ur5e_kinematics.yaml  ur_initial_positions.yaml
prox2f_description/launch/: view.launch.py
prox2f_description/rviz/: view.rviz
prox2f_description/urdf/: ghost_gripper.urdf.xacro  gripper.urdf.xacro  prox2f.urdf.xacro  vl53l5cx_macro.xacro  workspace_macro.xacro
prox2f_detection/: package.xml  setup.cfg  setup.py
prox2f_detection/prox2f_detection/: object_detection_node.py  object_detection_params.yaml
prox2f_experiment/: CMakeLists.txt  package.xml
prox2f_experiment/include/prox2f_experiment/: experiment_base.hpp
prox2f_experiment/src/: experiment_base.cpp  experiment_base_params.yaml  pickup.cpp  pregrasp_demo.cpp  pregrasp_evaluation.cpp
prox2f_launch/: CMakeLists.txt  package.xml
prox2f_launch/config/: global_planner.yaml  local_planner.yaml  prox2f_controllers.yaml
prox2f_launch/launch/: bringup.launch.py  planning_pipeline.launch.py  prox2f_common.py  proximity_pipeline.launch.py  proximity_sensors.launch.py  robotiq_2f_85.launch.py  sim_gazebo.launch.py  vision_pipeline.launch.py
prox2f_launch/rviz/: sim_gazebo.rviz  view.rviz  view_robot.rviz
prox2f_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
prox2f_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  prox2f.srdf  ros2_controllers.yaml
prox2f_moveit_config/launch/: moveit.launch.py
prox2f_planning/: CMakeLists.txt  move_group_interface_plugin.xml  package.xml  servo_plugin.xml  trajectory_sampler_plugin.xml
prox2f_planning/include/prox2f_planning/global_planner/: move_group_interface.hpp
prox2f_planning/include/prox2f_planning/local_planner/: servo.hpp  trajectory_sampler.hpp
prox2f_planning/src/: local_planner_params.yaml  move_group_interface.cpp  servo.cpp  trajectory_sampler.cpp
prox2f_pregrasp/: CMakeLists.txt  package.xml
prox2f_pregrasp/include/prox2f_pregrasp/: grasp_pose_publisher_node.hpp  servo_node.hpp
prox2f_pregrasp/src/: grasp_pose_publisher_node.cpp  grasp_pose_publisher_params.yaml  servo_node.cpp  servo_params.yaml
prox_mesh/: CMakeLists.txt  package.xml
prox_mesh/include/prox_mesh/: mesh_to_marker_node.hpp  normals_to_marker_node.hpp  raycaster.hpp  raycaster_embree.hpp  resample_mesh_node.hpp  triangulation_node.hpp
prox_mesh/src/: mesh_to_marker_node.cpp  normals_to_marker_node.cpp  resample_mesh_node.cpp  resample_mesh_params.yaml  triangulation_node.cpp
prox_msgs/: CMakeLists.txt  package.xml
prox_msgs/msg/: Grid.msg  MeshStamped.msg  TwistControllerState.msg  WrenchControllerState.msg
prox_preprocess/: CMakeLists.txt  package.xml
prox_preprocess/include/prox_preprocess/: filters.hpp
prox_preprocess/src/: cloud_processor_node.cpp  cloud_processor_params.yaml  concatenate_clouds_node.cpp  ema_node.cpp  filters.cpp  image_smoothing_node.cpp  image_smoothing_params.yaml  outlier_removal_node.cpp  pass_through_node.cpp
vl53l5cx_client/: CMakeLists.txt  package.xml
vl53l5cx_client/include/vl53l5cx_client/: auto_control_node.hpp
vl53l5cx_client/src/: auto_control_main.cpp  auto_control_node.cpp
