<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prox2f_detection</name>
  <version>0.0.0</version>
  <description>Object detection for prox2f.</description>
  <maintainer email="sakai_hibiki@stu.kanazawa-u.ac.jp">Sakai Hibiki</maintainer>
  <license>Apache License 2.0</license>

  <depend>cv_bridge</depend>
  <depend>generate_parameter_library</depend>
  <depend>message_filters</depend>
  <depend>python-numpy-quaternion-pip</depend>
  <depend>python3-open3d-pip</depend>
  <depend>python3-ultralytics-pip</depend>
  <depend>rclpy</depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
