<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prox2f_launch</name>
  <version>0.0.0</version>
  <description>Launch files for prox2f.</description>
  <maintainer email="sakai_hibiki@stu.kanazawa-u.ac.jp">Sakai Hibiki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>prox_preprocess</exec_depend>
  <exec_depend>prox2f_description</exec_depend>
  <exec_depend>prox2f_moveit_config</exec_depend>
  <exec_depend>prox2f_pregrasp</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
